# 2610DjangoViteStarter

./: README.md  pyproject.toml
_server/core/: middleware.py  models.py  views.py
_server/core/migrations/: 0001_initial.py  0002_resource_quizquestion.py  0003_alter_quizresult_user_alter_personalgoal_user_and_more.py
_server/core/templates/core/: index.html
client/: index.html  package-lock.json  package.json
client/src/: Layout.jsx  index.css  main.jsx
client/src/assets/: MOM SITE INFO - QUESTIONS.csv  MOM SITE INFO - RESOURCES.csv
client/src/pages/: CreateTodo.jsx  FirstAidKit.jsx  Home.jsx  Profile.jsx  QuizEmotionalWellbeing.jsx  QuizList.jsx  QuizMentalHealth.jsx  QuizPerceivedStress.jsx  QuizPhysicalHealth.jsx  Quizzes.jsx  Resources.jsx
client/src/pages/components/: Question.jsx
