[tool.poetry]
name = "mindful-moms"
version = "0.1.0"
description = "A Django web application designed to support moms by providing resources, community, and tools for mindfulness practices."
authors = ["Teague Beauchamp <a02376169@usu.edu>", "Joseph Ditton <jditton.atomic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
